[project]
name = "algrobssat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepinv>=0.3.3",
    "pandas>=2.3.1",
    "pip>=25.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/generate", "src/visuals"]

